--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "interstellar",
   "version": "0.0.2",
   "license": "MIT",
+  "scripts": {
+    "nx": "nx"
+  },
   "private": true,
   "dependencies": {
     "core-js": "^3.6.5",
