--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,5 +16,5 @@ jobs:
       - uses: pnpm/action-setup@v2
         with:
           version: 9.4.0
-      - run: pnpm install --frozen-lockfile
-      - run: pnpm nx build crew --verbose
+      - run: npm install --legacy-peer-deps
+      - run: npm nx build crew --verbose
