--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,4 +18,4 @@ jobs:
           version: 9.4.0
       - run: npx nx-cloud start-ci-run --distribute-on="8 linux-medium-js"
       - run: npm install --legacy-peer-deps
-      - run: npm nx run build crew --verbose
+      - run: npm run nx build crew --verbose
