--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: pnpm/action-setup@v2
         with:
           version: 9.4.0
-      - run: npx nx-cloud start-ci-run --distribute-on="8 linux-medium-js"
+    #   - run: npx nx-cloud start-ci-run --distribute-on="8 linux-medium-js"
       - run: npm install --legacy-peer-deps
       - run: npm run nx build crew --verbose
       - run: npx nx affected -t test 
